--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,52 @@
 version: "3"
 
 services:
+  nginx:
+    image: nginx:alpine
+    restart: on-failure
+    container_name: nginx
+    volumes:
+      - ./validation-web:/usr/share/nginx/html
+      - ./configs/.htpasswd:/etc/nginx/.htpasswd
+      - ./configs/nginx.conf:/etc/nginx/conf.d/default.conf:ro
+    ports:
+      - 80:80
+    depends_on:
+      - nodered
+      - nodered-feedback
+      - validation-web
+
+  validation-web:
+    image: nginx:alpine
+    restart: on-failure
+    container_name: validation-web
+    volumes:
+      - ./validation-web:/usr/share/nginx/html
+
+  nodered:
+    image: nodered/node-red:1.0.5
+    container_name: nodered
+    restart: on-failure
+
   nodered-feedback:
     image: nodered-feedback
+    restart: on-failure
     command: npm run dev
     container_name: nodered-feedback
     build: nodered-feedback
     volumes:
       - ./nodered-feedback:/usr/src/app
       - /usr/src/app/node_modules
-    ports:
-      - 1880:1880
 
   sensors-fake-server:
     image: sensors-fake-server
+    restart: on-failure
     command: npm run dev
     container_name: sensors-fake-server
     build: sensors-fake-server/server
     volumes:
       - ./sensors-fake-server/server:/usr/src/app
       - /usr/src/app/node_modules
-    ports:
-      - 3000:3000
     environment:
       ENVIRONMENT: development
     depends_on:
@@ -29,7 +54,5 @@ services:
 
   mosquitto:
     image: eclipse-mosquitto:1.6
+    restart: on-failure
     container_name: mosquitto
-    ports:
-      - 1883:1883
-      - 9001:9001
