--- a/configs/nginx.conf
+++ b/configs/nginx.conf
@@ -16,8 +16,8 @@ server {
     proxy_set_header X-Real-IP $remote_addr;
   }
 
-  location /nodered-feedback/ {
-    proxy_pass http://nodered-feedback:1880/;
+  location /nodered-cauldron/ {
+    proxy_pass http://nodered-cauldron:1880/;
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection "upgrade";
@@ -25,6 +25,6 @@ server {
   }
 
   location /simulator/ {
-    proxy_pass http://sensors-fake-server:3000/;
+    proxy_pass http://devices-iot-simulator:3000/;
   }
 }
