Minor fix on docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - 80:80
     depends_on:
       - nodered
-      - nodered-feedback
+      - nodered-cauldron
       - validation-web
 
   validation-web:
